<resources>
    <string name="app_name">AirlineActivity</string>
    <string name="airline">Airline</string>
    <string name="find_flights">Find Flights</string>
    <string name="flights">Flights</string>
    <string name="flight_num">Flight#</string>
    <string name="src">Src</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dest">Dest</string>
    <string name="city">City</string>
    <string name="help">Help</string>
    <string name="airline_name">Airline Name</string>
    <string name="delta">Delta</string>
    <string name="flight_number">Flight Number</string>
    <string name="flight_num_hint">12345</string>
    <string name="source_airport">Source Airport</string>
    <string-array name="menu">
        <item></item>
        <item>ReadMe</item>

    </string-array>
</resources>