<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <TableLayout
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:background="@drawable/airlist_background">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="83dp"
                    android:layout_height="44dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_horizontal"
                    android:paddingTop="16dp"
                    android:text="@string/flight_num"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/flyitem_flight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="1234"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="330dp"
            android:layout_height="77dp"
            android:background="@drawable/flight_item_bkgrnd"
            android:divider="?attr/dividerVertical"
            android:dividerPadding="10sp"
            android:gravity="center">

            <TableRow
                android:layout_width="45dp"
                android:layout_height="20sp">

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="41dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2sp"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/src"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/city"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="71dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/time"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <TextView
                    android:id="@+id/flyitem_src"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:paddingStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_src_city"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_src_date"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_src_time"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="45dp"
                android:layout_height="20sp">

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="38dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2sp"
                    android:paddingStart="4dp"
                    android:text="@string/dest"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/city"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="77dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/time"
                    android:textColor="@color/Lgrey"
                    android:textSize="10sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40sp">

                <TextView
                    android:id="@+id/flyitem_dest"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:paddingStart="4dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_dest_city"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_dest_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/flyitem_dest_time"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>